<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-starter-parent</artifactId>
        <version>2024.0.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>io.github.seenings</groupId>
    <artifactId>seen-backend</artifactId>
    <name>seen-backend</name>
    <packaging>pom</packaging>
    <version>0.1.56</version>
    <properties>
        <central-publishing-maven-plugin.version>0.7.0</central-publishing-maven-plugin.version>
        <hutool-all.version>5.8.36</hutool-all.version>
        <jasypt-spring-boot.version>3.0.5</jasypt-spring-boot.version>
        <java.version>21</java.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <maven-changelog-plugin.version>2.3</maven-changelog-plugin.version>
        <maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
        <maven-project-info-reports-plugin.version>3.9.0</maven-project-info-reports-plugin.version>
        <maven-jdeps-plugin.version>3.1.2</maven-jdeps-plugin.version>
        <maven-jxr-plugin.version>3.6.0</maven-jxr-plugin.version>
        <maven-site-plugin.version>3.21.0</maven-site-plugin.version>
        <maven-surefire-report-plugin.version>3.5.2</maven-surefire-report-plugin.version>
        <minio.version>8.5.17</minio.version>
        <mybatis-plus.version>3.5.11</mybatis-plus.version>
        <seen.version>${project.version}</seen.version>
        <springdoc-openapi.version>2.8.6</springdoc-openapi.version>
        <therapi-runtime-javadoc.version>0.15.0</therapi-runtime-javadoc.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <!--配置文件加密工具-->
            <dependency>
                <groupId>com.github.ulisesbocchio</groupId>
                <artifactId>jasypt-spring-boot</artifactId>
                <version>${jasypt-spring-boot.version}</version>
            </dependency>
            <!-- Runtime library -->
            <dependency>
                <groupId>com.github.therapi</groupId>
                <artifactId>therapi-runtime-javadoc</artifactId>
                <version>${therapi-runtime-javadoc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.seenings</groupId>
                <artifactId>seen-api</artifactId>
                <version>${seen.version}</version>
            </dependency>
            <!--引入工具包-->
            <dependency>
                <groupId>io.github.seenings</groupId>
                <artifactId>seen-core</artifactId>
                <version>${seen.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.seenings</groupId>
                <artifactId>seen-extra</artifactId>
                <version>${seen.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.seenings</groupId>
                <artifactId>seen-micro</artifactId>
                <version>${seen.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.seenings</groupId>
                <artifactId>seen-micro-database</artifactId>
                <version>${seen.version}</version>
            </dependency>
            <!--seen spring-->
            <dependency>
                <groupId>io.github.seenings</groupId>
                <artifactId>seen-spring-config</artifactId>
                <version>${seen.version}</version>
            </dependency>
            <!--国产工具包-->
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool-all.version}</version>
            </dependency>
            <!--分布式文件存储-->
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>
            <!--map strucst 对象转换-->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <!--import从前往后饮用-->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-bom</artifactId>
                <version>${mybatis-plus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!--springdoc api-->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi</artifactId>
                <version>${springdoc-openapi.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-changelog-plugin</artifactId>
                <version>${maven-changelog-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven-deploy-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven-gpg-plugin.version}</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>${maven-install-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <additionalOptions>
                        <additionalOption>-Xdoclint:none</additionalOption>
                    </additionalOptions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jdeps-plugin</artifactId>
                <version>${maven-jdeps-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>${maven-jxr-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>${maven-project-info-reports-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>${maven-site-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${maven-surefire-report-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>${central-publishing-maven-plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-changelog-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
            </plugin>
        </plugins>
    </reporting>
    <modules>
        <module>seen-common</module>
        <module>seen-gateway</module>
        <module>seen-micro</module>
        <module>seen-micro-database</module>
        <module>seen-service</module>
    </modules>
    <url>https://seenings.github.io/seen-backend/</url>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>poolsnowhui</name>
            <email>chixuehui@hotmail.com</email>
            <organization>seen technologies org.</organization>
            <organizationUrl>https://github.com/seenings</organizationUrl>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git://github.com/seenings/seen-backend.git</connection>
        <developerConnection>scm:git:ssh://github.com/seenings/seen-backend.git</developerConnection>
        <url>https://github.com/seenings/seen-backend/tree/${project.scm.tag}</url>
        <tag>main</tag>
    </scm>
    <issueManagement>
        <system>Seen</system>
        <url>https://github.com/seenings/seen-backend/issues</url>
    </issueManagement>
</project>
